Fix scrollbar bug, add responsive images (#1973)

--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -497,10 +497,6 @@ section#developers .section-header {
 
 /* Text Pages */
 
-section.text {
-    overflow-x: scroll;
-}
-
 section.text h1 {
 	font-size: 2.0rem;
 	line-height: 3.0rem;
@@ -721,6 +717,10 @@ body.documentation .content-wrapper {
     }
 }
 
+body.documentation section#documentation .content img {
+	max-width: 100%;
+	height: auto;
+}
 body.documentation section#documentation .content > h1:first-child {
 	margin-top: 0px;
 }
